--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.pricecompare">
+    package="com.mykolaonyshchuk.pricecompare">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".MyApplication"
+        android:name="com.mykolaonyshchuk.pricecompare.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,13 +13,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PriceCompare">
         <activity
-            android:name=".ProductDetailsActivity"
+            android:name="com.mykolaonyshchuk.pricecompare.ProductDetailsActivity"
             android:exported="false" />
         <activity
-            android:name=".ListActivity"
+            android:name="com.mykolaonyshchuk.pricecompare.ListActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name="com.mykolaonyshchuk.pricecompare.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
